lab1/Test/L1-A-7-67.output
Error Type A at Line 14
Error Type A at Line 36
