lab1/Test/L1-A-7-67.cmm
float PzHt ( struct U2 N , int HjHbE0lDRYWjOQg3ItT 
  [ 2118805203 ] ) {
}
struct dgwf77FCXMVXlVgx {
};
struct {
  int MVCjngjKWs , Rj4Rh1tHnxaYd41 , d0WZ60E ;
  int zyyhiduJuzJO = NNPgoxuyYFnto && o8i3cPmyz4AydiX 
    == F1QA6NpPY6y + BI * qPpguB9tUyKYUby6 [ bN93J9DqYiNBwLj 
    = LT9tC || S2Sn < ( w > MOR7l6VF_KzkZ - ! ( zIsB7dhYq 
    = VNKMSH >= ( Z6FHAXowM9xLB != wXnsh9fjqhGvZ + ( raDWVCjQLRKWVS 
    && tURkfJkAUymjq <= bMlQjqSVjbHxbFD9BXaR / ( QfoU3 
    && Lb + ( fg0rfjwAxQgFvg / - PJAxTkWmk ( QfWic , toFz06Ks1CD9lbc92x 
    ) * ! JJmUZ7ybIhyna60Ozcr . \LOQFoOyL - MZ89QQY4 . 
    r ) ) ) ) . rzcKZDgWLQdG5uWCi6y ) / Obe9 ( OCydVSunWWK9gn71 
    * 580759239.1617939414 - 1906777347 / dfFN ) ) ] . 
    wvqsbpWzrM1XIF7j / - ! vFH6QlNWpgSx ( ) ;
}ZhbULquuDQ4GVSq 
;
int qG1GGuAVO0sAgqMxlKM ( ) {
  O ;
  if ( zz0OsRjfhXuRASpFk6C )   v4fzxgrWmVG ;
else   if ( HM4pT )   e3Wfql7e9DAPgpw ;


  zTdi ;
  aYsftCw3yn85e9E ;
  while ( NbbUb7iuxOEh8elVKbSQ )   if ( jASTxL9h5IA05yCEbtU 
    )   AnictSRgnMC00OhBBsbh ;
else   IVATAM1UI ;


{
    if ( EjCqtlr5A )     return UdE4goIsZ5L ;

  }%}
int _Bq , BOskyLG3 

;
int ;
int ;
